# tap-snowflake

./: pyproject.toml
tap_snowflake/: client.py
